--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <template id="card-template">
   <div style="padding:10px">
     <div class="card" style="width: 12rem;">
-      <img src="https://cdn.hswstatic.com/gif/water-update.jpg" class="card-img-top" alt="...">
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/258.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="pokemonName"></h5>
         <p class="pokemonNumber"></p>
